<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Enhanced MidiSheetMusic</string>
    <string name="song_settings_str">More Settings</string>
    <string name="save_images_str">Save As Images</string>
    <string name="save_images_descr_str">Save the sheet music as images, in the directory /Pictures/MidiSheetMusic, with the following filename</string>
    <string name="help_str">Help</string>
    <string name="sheet_prefs_title">Sheet Music Preferences</string>
    <string name="restore_defaults">Restore Default Settings</string>
    <string name="select_tracks_to_display">Select Tracks to Display</string>
    <string name="select_tracks_to_play">Select Tracks to Play</string>
    <string name="select_instruments_per_track">Select Instruments For Each Track</string>
    <string name="set_all_to_piano">Set All Instruments to Piano</string>
    <string name="scroll_vertically">Scroll Vertically</string>
    <string name="show_piano">Show the Piano</string>
    <string name="show_lyrics">Show Lyrics</string>
    <string name="show_note_letters">Show Note Letters</string>
    <string name="combine_to_two_staffs">Combine To Two Staffs</string>
    <string name="combine_to_two_staffs_summary">Combine all the tracks into two staffs (left hand and right hand staffs). </string>
    <string name="split_to_two_staffs">Split Track Into Two Staffs</string>
    <string name="split_to_two_staffs_summary">Split the single track into two staffs (left hand and right hand staffs).</string>
    <string name="transpose">Transpose Notes</string>
    <string name="midiShift">Shift MIDI Input</string>
    <string name="key_signature">Key Signature</string>
    <string name="time_signature">Time Signature</string>
    <string name="combine_interval">Combine Interval</string>
    <string name="combine_interval_summary">Notes within the given interval (in milliseconds) are combined into a single chord</string>
    <string name="count_in_measures">Count-in measures</string>
    <string name="count_in_measures_none">None</string>
    <plurals name="count_in_measures_summary">
        <item quantity="one">%d measure of beat clicks before playback</item>
        <item quantity="other">%d measures of beat clicks before playback</item>
    </plurals>
    <string name="right_hand_color">Right Hand Color</string>
    <string name="left_hand_color">Left Hand Color</string>
    <string name="show_measures">Show Measure Numbers</string>
    <string name="show_beat_markers">Show Beat Markers</string>
    <string name="show_track_labels">Show Track Labels</string>
    <string name="play_measures_in_loop_title">Settings for Play Measures in a Loop</string>
    <string name="play_measures_in_loop">Play Measures in a Loop</string>
    <string name="play_measures_in_loop_start">Start Measure</string>
    <string name="play_measures_in_loop_end">End Measure</string>
    <string name="loop_on_measures">Loop on Measures</string>
    <string name="scan_button_title">Scan SD Card for MIDI files</string>
    <string name="scan_files_str">Scan for MIDI Files</string>
    <string name="browse_files_str">Browse for MIDI Files</string>
    <string name="msg_permission_denied">Storage permission is needed to load MIDI files</string>
    <string name="msg_permission_denied_retry">Try again</string>
    <string name="err_file_not_found">Not found: Item doesn\'t exist!</string>
    <string name="title_activity_settings">Song Settings</string>
    <string name="back">Back</string>
    <string name="replay">Replay</string>
    <string name="play">Play</string>
    <string name="rewind">Rewind</string>
    <string name="forward">Forward</string>
    <string name="show_hide_piano">Show/Hide Piano</string>
    <string name="settings">Settings</string>
    <string name="use_full_height">Use full height</string>
    <string name="use_note_colors">Use Note Colors</string>
    <string name="use_accidental_colors">Use Accidental Colors</string>
    <string name="track_options">Track Options</string>
    <string name="track_visibility">Toggle track visibility</string>
    <string name="track_mute">Toggle track mute</string>
    <string name="track_instrument">Change instrument</string>
    <string name="track_octave_shift">Octave shift</string>
    <string name="track_volume">Track volume</string>
    <string name="track_number">Track %d</string>
    <string name="track_instrument_picker_title">Instrument for Track %d</string>
    <string name="octave_shift_none">T</string>
    <string name="octave_shift_8va">8va</string>
    <string name="octave_shift_8vb">8vb</string>
    <string name="home">Home</string>
    <string name="treble_clef">Treble clef (right hand)</string>
    <string name="bass_clef">Bass clef (left hand)</string>

</resources>
