<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/toolbar_height"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/btn_back"
        style="@style/ToolbarButtonStyle"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/back" />

    <ImageButton
        android:id="@+id/btn_settings"
        style="@style/ToolbarButtonStyle"
        android:contentDescription="@string/settings"
        android:src="@drawable/ic_settings" />

    <ImageButton
        android:id="@+id/btn_replay"
        style="@style/ToolbarButtonStyle"
        android:src="@drawable/ic_replay"
        android:contentDescription="@string/replay" />

    <ImageButton
        android:id="@+id/btn_play"
        style="@style/ToolbarButtonStyle"
        android:scaleY="1.5"
        android:src="@drawable/ic_play"
        android:contentDescription="@string/play" />

    <ImageButton
        android:id="@+id/btn_rewind"
        style="@style/ToolbarButtonStyle"
        android:src="@drawable/ic_rewind"
        android:contentDescription="@string/rewind" />

    <ImageButton
        android:id="@+id/btn_forward"
        style="@style/ToolbarButtonStyle"
        android:src="@drawable/ic_forward"
        android:contentDescription="@string/forward" />

    <TextView
        android:id="@+id/txt_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:lines="2"
        android:padding="4dp"
        android:text="100%"
        tools:text="100%" />

    <SeekBar
        android:id="@+id/speed_bar"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        android:layout_weight="1"
        android:max="150"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:progress="100" />

    <Button
        android:id="@+id/btn_midi"
        style="@style/DisabledToolbarButton"
        android:enabled="false"
        android:text="MIDI"
        android:layout_width="60dp"
        android:textSize="14sp" />

    <ImageButton
        android:id="@+id/btn_left"
        style="@style/ToolbarButtonStyle"
        android:src="@drawable/ic_bass_clef"
        android:contentDescription="@string/bass_clef" />

    <ImageButton
        android:id="@+id/btn_right"
        style="@style/ToolbarButtonStyle"
        android:src="@drawable/ic_treble_clef"
        android:contentDescription="@string/treble_clef" />

    <ImageButton
        android:id="@+id/btn_piano"
        style="@style/ToolbarButtonStyle"
        android:contentDescription="@string/show_hide_piano"
        android:src="@drawable/ic_piano" />

</LinearLayout>